Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sun Apr 28 12:30:32 BST 2002	Riley Williams <Riley@Williams.Name>

	* Verified that all include/{arch,linuxmt}/*.h files are clean
	  as far as `splint -weak` is concerned.
	* Changed prototypes for functions in arch/i86/mm/user.c such
	  that all size fields use size_t parameters rather than the
	  unholy mix of {signed,unsigned} {short,long} integers that
	  were previously used.
	* Verified that splint is currently unable to check code that
	  includes #asm..#endasm sections, so init/main.c cannot be
	  checked.

Sat Apr 27 22:54:16 EEST 2002	Harry Kalogirou <harkal@gmx.net>

	* Added swap creation ioctl in mem.c. Swap is activated with
	  the "swapon" utility in elkscmd package, and currently can
	  not be deactivated.

Sat Apr 27 18:31:43 BST 2002	Riley Williams <Riley@Williams.Name>

	* Modified `make lint` to warn regarding /*@ignore@*/ sections.

Sat Apr 27 15:12:56 EEST 2002	Harry Kalogirou <harkal@gmx.net>

	* Some more corrections to the mm after the ANSI'fication.
	* Bug fix in swap_strategy()

Sat Apr 27 00:49:08 BST 2002	Riley Williams <Riley@Williams.Name>

	* Tweaked include/linuxmt/string.h such that the definitions
	  therein match those on the GNU man pages for those functions.
	* Tweaked arch/i86/lib/bitops.c to match the revised prototypes
	  used above.
	* Ensured that the ELKS kernel compiles, and also that it boots
	  on my i80286 based laptop computer.

Sat Apr 27 00:16:36 BST 2002	Riley Williams <Riley@Williams.Name>

	* Labelled virtual memory swapping support as experimental, and
	  made it invisible unless CONFIG_EXPERIMENTAL is enabled.
